<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_menu_exercises"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/ic_menu_workout"
            android:title="@string/menu_workouts" />
        <item
            android:id="@+id/nav_custom_workouts"
            android:icon="@drawable/ic_custom_workout"
            android:title="@string/menu_custom" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />

    </group>
</menu>