<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_exercises">

    <fragment
        android:id="@+id/nav_exercises"
        android:name="com.evan.workoutapp.ui.exercises.ExerciseFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_workouts"
        android:name="com.evan.workoutapp.ui.workouts.WorkoutFragment"
        android:label="@string/menu_workouts"
        tools:layout="@layout/fragment_workouts" />

    <fragment
        android:id="@+id/nav_custom_workouts"
        android:name="com.evan.workoutapp.ui.custom.CustomFragment"
        android:label="@string/menu_custom"
        tools:layout="@layout/fragment_custom_workouts" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.evan.workoutapp.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.evan.workoutapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>